Fix author in config for proper SEO meta tag generation

--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,7 @@ sass:
 
 # About/contact
 author:
-  name:              Mikey Wills
-  url:               https://twitter.com/mukealicious
-  email:             mikey@muke.me
+  twitter: mukealicious
 
 # Build settings
 markdown: kramdown
