--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:          pretty
 
 # Setup
 title:              Mikey Wills
-description:        Shitting on the internet and calling it a sundae
+description:        Living at the intersection of engineering, design, and product thinking
 baseurl:            "" # the subpath of your site, e.g. /blog
 url:                https://muke.me # the base hostname & protocol for your site, e.g. http://example.com
 analytics_id:       UA-33507363-1
